Revert "Visual enhancements next: Fix alignments of icons"
This reverts commit 2a2496f818b1adc967350a45bf4b5d345f7c12e6.

Reason for revert: CSS rules meant for the new feature flag
were leaking into the non-feature flagged version of Vector which
was not intentional. I'll repost this change shortly.

Bug: T319070

--- a/resources/skins.vector.styles/components/StickyHeader.less
+++ b/resources/skins.vector.styles/components/StickyHeader.less
@@ -42,10 +42,6 @@
 	&-context-bar {
 		display: flex;
 		align-items: center;
-
-		.vector-feature-visual-enhancement-next-enabled & {
-			column-gap: 8px;
-		}
 	}
 
 	&-start {
